etapa2/y.output
   0  $accept : program $end

   1  program : declarationList

   2  declarationList : variableDeclaration declarationList
   3                  | functDeclaration declarationList

   4  variableDeclaration : TYPE IDENTIFIER arrayOrNormal ';'

   5  arrayOrNormal : ':' INT_LIT
   6                | ':' BOOL_LIT
   7                | ':' CHAR_LIT
   8                | ':' STRING
   9                | '[' INT_LIT ']' arrayInit

  10  arrayInit : ':' arrayInitLiterals
  11            |

  12  arrayInitLiterals : BOOL_LIT arrayInitLiterals
  13                    | INT_LIT arrayInitLiterals
  14                    | CHAR_LIT arrayInitLiterals
  15                    |

  16  functDeclaration : TYPE IDENTIFIER '(' functParamsDef ')' commandBlock ';'

  17  functParamsDef : TYPE IDENTIFIER functParamsDefCont
  18                 |

  19  functCall : IDENTIFIER '(' functParams ')'

  20  functParams : IDENTIFIER functParamsCont
  21              |

  22  functParamsCont : ',' IDENTIFIER functParamsCont
  23                  |

  24  functParamsDefCont : ',' TYPE IDENTIFIER functParamsDefCont
  25                     |

  26  commandBlock : '{' commandBlockList '}'

  27  commandBlockList : command ';' commandBlockListCont

  28  commandBlockListCont : command ';' commandBlockListCont
  29                       |

  30  flowControl : IF '(' expression ')' THEN command ifThenCont
  31              | FOR '(' forCont

  32  ifThenCont : ELSE command
  33             |

  34  forCont : expression forEnd
  35          | IDENTIFIER '=' expression TO expression forEnd

  36  forEnd : ')' command

  37  command : print
  38          | return
  39          | read
  40          | attribuition
  41          | flowControl
  42          | commandBlock
  43          |

  44  attribuition : IDENTIFIER attribuitionCont

  45  attribuitionCont : '=' expression
  46                   | '[' expression ']' '=' expression

  47  read : READ IDENTIFIER

  48  return : RETURN expression

  49  print : PRINT printList

  50  printList : STRING printList
  51            | expression printList
  52            |

  53  logicalExpression : arithmeticExpression relationalOperators arithmeticExpression
  54                    | logicalExpression logicalOperators logicalExpression
  55                    | BOOL_LIT

  56  arithmeticExpression : arithmeticExpression arithmeticOperators arithmeticExpression
  57                       | integerExpression
  58                       | IDENTIFIER expressionVarCont

  59  integerExpression : integerExpression arithmeticOperators integerExpression
  60                    | INT_LIT

  61  charExpression : charExpression operator charExpression
  62                 | CHAR_LIT

  63  expression : '(' expression ')'
  64             | functCall
  65             | logicalExpression
  66             | arithmeticExpression
  67             | charExpression

  68  expressionVarCont : '[' arrayPosition ']'
  69                    |

  70  arrayPosition : integerExpression

  71  operator : logicalOperators
  72           | relationalOperators
  73           | arithmeticOperators

  74  logicalOperators : '|' '|'
  75                   | '&' '&'

  76  relationalOperators : '=' '='
  77                      | '!' '='
  78                      | '<' '='
  79                      | '>' '='

  80  arithmeticOperators : '+'
  81                      | '-'
  82                      | '*'
  83                      | '/'

state 0
	$accept : . program $end  (0)

	TYPE  shift 1
	.  error

	program  goto 2
	declarationList  goto 3
	variableDeclaration  goto 4
	functDeclaration  goto 5


state 1
	variableDeclaration : TYPE . IDENTIFIER arrayOrNormal ';'  (4)
	functDeclaration : TYPE . IDENTIFIER '(' functParamsDef ')' commandBlock ';'  (16)

	IDENTIFIER  shift 6
	.  error


state 2
	$accept : program . $end  (0)

	$end  accept


state 3
	program : declarationList .  (1)

	.  reduce 1


state 4
	declarationList : variableDeclaration . declarationList  (2)

	TYPE  shift 1
	.  error

	declarationList  goto 7
	variableDeclaration  goto 4
	functDeclaration  goto 5


state 5
	declarationList : functDeclaration . declarationList  (3)

	TYPE  shift 1
	.  error

	declarationList  goto 8
	variableDeclaration  goto 4
	functDeclaration  goto 5


state 6
	variableDeclaration : TYPE IDENTIFIER . arrayOrNormal ';'  (4)
	functDeclaration : TYPE IDENTIFIER . '(' functParamsDef ')' commandBlock ';'  (16)

	':'  shift 9
	'['  shift 10
	'('  shift 11
	.  error

	arrayOrNormal  goto 12


state 7
	declarationList : variableDeclaration declarationList .  (2)

	.  reduce 2


state 8
	declarationList : functDeclaration declarationList .  (3)

	.  reduce 3


state 9
	arrayOrNormal : ':' . INT_LIT  (5)
	arrayOrNormal : ':' . BOOL_LIT  (6)
	arrayOrNormal : ':' . CHAR_LIT  (7)
	arrayOrNormal : ':' . STRING  (8)

	CHAR_LIT  shift 13
	INT_LIT  shift 14
	BOOL_LIT  shift 15
	STRING  shift 16
	.  error


state 10
	arrayOrNormal : '[' . INT_LIT ']' arrayInit  (9)

	INT_LIT  shift 17
	.  error


state 11
	functDeclaration : TYPE IDENTIFIER '(' . functParamsDef ')' commandBlock ';'  (16)
	functParamsDef : .  (18)

	TYPE  shift 18
	')'  reduce 18

	functParamsDef  goto 19


state 12
	variableDeclaration : TYPE IDENTIFIER arrayOrNormal . ';'  (4)

	';'  shift 20
	.  error


state 13
	arrayOrNormal : ':' CHAR_LIT .  (7)

	.  reduce 7


state 14
	arrayOrNormal : ':' INT_LIT .  (5)

	.  reduce 5


state 15
	arrayOrNormal : ':' BOOL_LIT .  (6)

	.  reduce 6


state 16
	arrayOrNormal : ':' STRING .  (8)

	.  reduce 8


state 17
	arrayOrNormal : '[' INT_LIT . ']' arrayInit  (9)

	']'  shift 21
	.  error


state 18
	functParamsDef : TYPE . IDENTIFIER functParamsDefCont  (17)

	IDENTIFIER  shift 22
	.  error


state 19
	functDeclaration : TYPE IDENTIFIER '(' functParamsDef . ')' commandBlock ';'  (16)

	')'  shift 23
	.  error


state 20
	variableDeclaration : TYPE IDENTIFIER arrayOrNormal ';' .  (4)

	.  reduce 4


state 21
	arrayOrNormal : '[' INT_LIT ']' . arrayInit  (9)
	arrayInit : .  (11)

	':'  shift 24
	';'  reduce 11

	arrayInit  goto 25


state 22
	functParamsDef : TYPE IDENTIFIER . functParamsDefCont  (17)
	functParamsDefCont : .  (25)

	','  shift 26
	')'  reduce 25

	functParamsDefCont  goto 27


state 23
	functDeclaration : TYPE IDENTIFIER '(' functParamsDef ')' . commandBlock ';'  (16)

	'{'  shift 28
	.  error

	commandBlock  goto 29


state 24
	arrayInit : ':' . arrayInitLiterals  (10)
	arrayInitLiterals : .  (15)

	CHAR_LIT  shift 30
	INT_LIT  shift 31
	BOOL_LIT  shift 32
	';'  reduce 15

	arrayInitLiterals  goto 33


state 25
	arrayOrNormal : '[' INT_LIT ']' arrayInit .  (9)

	.  reduce 9


state 26
	functParamsDefCont : ',' . TYPE IDENTIFIER functParamsDefCont  (24)

	TYPE  shift 34
	.  error


state 27
	functParamsDef : TYPE IDENTIFIER functParamsDefCont .  (17)

	.  reduce 17


state 28
	commandBlock : '{' . commandBlockList '}'  (26)
	command : .  (43)

	IDENTIFIER  shift 35
	READ  shift 36
	PRINT  shift 37
	RETURN  shift 38
	FOR  shift 39
	IF  shift 40
	'{'  shift 28
	';'  reduce 43

	commandBlock  goto 41
	commandBlockList  goto 42
	command  goto 43
	flowControl  goto 44
	print  goto 45
	return  goto 46
	read  goto 47
	attribuition  goto 48


state 29
	functDeclaration : TYPE IDENTIFIER '(' functParamsDef ')' commandBlock . ';'  (16)

	';'  shift 49
	.  error


state 30
	arrayInitLiterals : CHAR_LIT . arrayInitLiterals  (14)
	arrayInitLiterals : .  (15)

	CHAR_LIT  shift 30
	INT_LIT  shift 31
	BOOL_LIT  shift 32
	';'  reduce 15

	arrayInitLiterals  goto 50


state 31
	arrayInitLiterals : INT_LIT . arrayInitLiterals  (13)
	arrayInitLiterals : .  (15)

	CHAR_LIT  shift 30
	INT_LIT  shift 31
	BOOL_LIT  shift 32
	';'  reduce 15

	arrayInitLiterals  goto 51


state 32
	arrayInitLiterals : BOOL_LIT . arrayInitLiterals  (12)
	arrayInitLiterals : .  (15)

	CHAR_LIT  shift 30
	INT_LIT  shift 31
	BOOL_LIT  shift 32
	';'  reduce 15

	arrayInitLiterals  goto 52


state 33
	arrayInit : ':' arrayInitLiterals .  (10)

	.  reduce 10


state 34
	functParamsDefCont : ',' TYPE . IDENTIFIER functParamsDefCont  (24)

	IDENTIFIER  shift 53
	.  error


state 35
	attribuition : IDENTIFIER . attribuitionCont  (44)

	'['  shift 54
	'='  shift 55
	.  error

	attribuitionCont  goto 56


state 36
	read : READ . IDENTIFIER  (47)

	IDENTIFIER  shift 57
	.  error


state 37
	print : PRINT . printList  (49)
	printList : .  (52)

	CHAR_LIT  shift 58
	INT_LIT  shift 59
	BOOL_LIT  shift 60
	IDENTIFIER  shift 61
	STRING  shift 62
	'('  shift 63
	ELSE  reduce 52
	';'  reduce 52

	functCall  goto 64
	expression  goto 65
	printList  goto 66
	logicalExpression  goto 67
	arithmeticExpression  goto 68
	integerExpression  goto 69
	charExpression  goto 70


state 38
	return : RETURN . expression  (48)

	CHAR_LIT  shift 58
	INT_LIT  shift 59
	BOOL_LIT  shift 60
	IDENTIFIER  shift 61
	'('  shift 63
	.  error

	functCall  goto 64
	expression  goto 71
	logicalExpression  goto 67
	arithmeticExpression  goto 68
	integerExpression  goto 69
	charExpression  goto 70


state 39
	flowControl : FOR . '(' forCont  (31)

	'('  shift 72
	.  error


state 40
	flowControl : IF . '(' expression ')' THEN command ifThenCont  (30)

	'('  shift 73
	.  error


state 41
	command : commandBlock .  (42)

	.  reduce 42


state 42
	commandBlock : '{' commandBlockList . '}'  (26)

	'}'  shift 74
	.  error


state 43
	commandBlockList : command . ';' commandBlockListCont  (27)

	';'  shift 75
	.  error


state 44
	command : flowControl .  (41)

	.  reduce 41


state 45
	command : print .  (37)

	.  reduce 37


state 46
	command : return .  (38)

	.  reduce 38


state 47
	command : read .  (39)

	.  reduce 39


state 48
	command : attribuition .  (40)

	.  reduce 40


state 49
	functDeclaration : TYPE IDENTIFIER '(' functParamsDef ')' commandBlock ';' .  (16)

	.  reduce 16


state 50
	arrayInitLiterals : CHAR_LIT arrayInitLiterals .  (14)

	.  reduce 14


state 51
	arrayInitLiterals : INT_LIT arrayInitLiterals .  (13)

	.  reduce 13


state 52
	arrayInitLiterals : BOOL_LIT arrayInitLiterals .  (12)

	.  reduce 12


state 53
	functParamsDefCont : ',' TYPE IDENTIFIER . functParamsDefCont  (24)
	functParamsDefCont : .  (25)

	','  shift 26
	')'  reduce 25

	functParamsDefCont  goto 76


state 54
	attribuitionCont : '[' . expression ']' '=' expression  (46)

	CHAR_LIT  shift 58
	INT_LIT  shift 59
	BOOL_LIT  shift 60
	IDENTIFIER  shift 61
	'('  shift 63
	.  error

	functCall  goto 64
	expression  goto 77
	logicalExpression  goto 67
	arithmeticExpression  goto 68
	integerExpression  goto 69
	charExpression  goto 70


state 55
	attribuitionCont : '=' . expression  (45)

	CHAR_LIT  shift 58
	INT_LIT  shift 59
	BOOL_LIT  shift 60
	IDENTIFIER  shift 61
	'('  shift 63
	.  error

	functCall  goto 64
	expression  goto 78
	logicalExpression  goto 67
	arithmeticExpression  goto 68
	integerExpression  goto 69
	charExpression  goto 70


state 56
	attribuition : IDENTIFIER attribuitionCont .  (44)

	.  reduce 44


state 57
	read : READ IDENTIFIER .  (47)

	.  reduce 47


state 58
	charExpression : CHAR_LIT .  (62)

	.  reduce 62


state 59
	integerExpression : INT_LIT .  (60)

	.  reduce 60


state 60
	logicalExpression : BOOL_LIT .  (55)

	.  reduce 55


61: shift/reduce conflict (shift 80, reduce 69) on '('
state 61
	functCall : IDENTIFIER . '(' functParams ')'  (19)
	arithmeticExpression : IDENTIFIER . expressionVarCont  (58)
	expressionVarCont : .  (69)

	'['  shift 79
	'('  shift 80
	CHAR_LIT  reduce 69
	INT_LIT  reduce 69
	BOOL_LIT  reduce 69
	IDENTIFIER  reduce 69
	STRING  reduce 69
	TO  reduce 69
	ELSE  reduce 69
	';'  reduce 69
	']'  reduce 69
	')'  reduce 69
	'='  reduce 69
	'!'  reduce 69
	'<'  reduce 69
	'>'  reduce 69
	'+'  reduce 69
	'-'  reduce 69
	'*'  reduce 69
	'/'  reduce 69

	expressionVarCont  goto 81


state 62
	printList : STRING . printList  (50)
	printList : .  (52)

	CHAR_LIT  shift 58
	INT_LIT  shift 59
	BOOL_LIT  shift 60
	IDENTIFIER  shift 61
	STRING  shift 62
	'('  shift 63
	ELSE  reduce 52
	';'  reduce 52

	functCall  goto 64
	expression  goto 65
	printList  goto 82
	logicalExpression  goto 67
	arithmeticExpression  goto 68
	integerExpression  goto 69
	charExpression  goto 70


state 63
	expression : '(' . expression ')'  (63)

	CHAR_LIT  shift 58
	INT_LIT  shift 59
	BOOL_LIT  shift 60
	IDENTIFIER  shift 61
	'('  shift 63
	.  error

	functCall  goto 64
	expression  goto 83
	logicalExpression  goto 67
	arithmeticExpression  goto 68
	integerExpression  goto 69
	charExpression  goto 70


state 64
	expression : functCall .  (64)

	.  reduce 64


state 65
	printList : expression . printList  (51)
	printList : .  (52)

	CHAR_LIT  shift 58
	INT_LIT  shift 59
	BOOL_LIT  shift 60
	IDENTIFIER  shift 61
	STRING  shift 62
	'('  shift 63
	ELSE  reduce 52
	';'  reduce 52

	functCall  goto 64
	expression  goto 65
	printList  goto 84
	logicalExpression  goto 67
	arithmeticExpression  goto 68
	integerExpression  goto 69
	charExpression  goto 70


state 66
	print : PRINT printList .  (49)

	.  reduce 49


state 67
	logicalExpression : logicalExpression . logicalOperators logicalExpression  (54)
	expression : logicalExpression .  (65)

	'|'  shift 85
	'&'  shift 86
	CHAR_LIT  reduce 65
	INT_LIT  reduce 65
	BOOL_LIT  reduce 65
	IDENTIFIER  reduce 65
	STRING  reduce 65
	TO  reduce 65
	ELSE  reduce 65
	';'  reduce 65
	']'  reduce 65
	'('  reduce 65
	')'  reduce 65

	logicalOperators  goto 87


state 68
	logicalExpression : arithmeticExpression . relationalOperators arithmeticExpression  (53)
	arithmeticExpression : arithmeticExpression . arithmeticOperators arithmeticExpression  (56)
	expression : arithmeticExpression .  (66)

	'='  shift 88
	'!'  shift 89
	'<'  shift 90
	'>'  shift 91
	'+'  shift 92
	'-'  shift 93
	'*'  shift 94
	'/'  shift 95
	CHAR_LIT  reduce 66
	INT_LIT  reduce 66
	BOOL_LIT  reduce 66
	IDENTIFIER  reduce 66
	STRING  reduce 66
	TO  reduce 66
	ELSE  reduce 66
	';'  reduce 66
	']'  reduce 66
	'('  reduce 66
	')'  reduce 66

	relationalOperators  goto 96
	arithmeticOperators  goto 97


69: shift/reduce conflict (shift 92, reduce 57) on '+'
69: shift/reduce conflict (shift 93, reduce 57) on '-'
69: shift/reduce conflict (shift 94, reduce 57) on '*'
69: shift/reduce conflict (shift 95, reduce 57) on '/'
state 69
	arithmeticExpression : integerExpression .  (57)
	integerExpression : integerExpression . arithmeticOperators integerExpression  (59)

	'+'  shift 92
	'-'  shift 93
	'*'  shift 94
	'/'  shift 95
	CHAR_LIT  reduce 57
	INT_LIT  reduce 57
	BOOL_LIT  reduce 57
	IDENTIFIER  reduce 57
	STRING  reduce 57
	TO  reduce 57
	ELSE  reduce 57
	';'  reduce 57
	']'  reduce 57
	'('  reduce 57
	')'  reduce 57
	'='  reduce 57
	'|'  reduce 57
	'&'  reduce 57
	'!'  reduce 57
	'<'  reduce 57
	'>'  reduce 57

	arithmeticOperators  goto 98


state 70
	charExpression : charExpression . operator charExpression  (61)
	expression : charExpression .  (67)

	'='  shift 88
	'|'  shift 85
	'&'  shift 86
	'!'  shift 89
	'<'  shift 90
	'>'  shift 91
	'+'  shift 92
	'-'  shift 93
	'*'  shift 94
	'/'  shift 95
	CHAR_LIT  reduce 67
	INT_LIT  reduce 67
	BOOL_LIT  reduce 67
	IDENTIFIER  reduce 67
	STRING  reduce 67
	TO  reduce 67
	ELSE  reduce 67
	';'  reduce 67
	']'  reduce 67
	'('  reduce 67
	')'  reduce 67

	relationalOperators  goto 99
	logicalOperators  goto 100
	arithmeticOperators  goto 101
	operator  goto 102


state 71
	return : RETURN expression .  (48)

	.  reduce 48


state 72
	flowControl : FOR '(' . forCont  (31)

	CHAR_LIT  shift 58
	INT_LIT  shift 59
	BOOL_LIT  shift 60
	IDENTIFIER  shift 103
	'('  shift 63
	.  error

	functCall  goto 64
	expression  goto 104
	forCont  goto 105
	logicalExpression  goto 67
	arithmeticExpression  goto 68
	integerExpression  goto 69
	charExpression  goto 70


state 73
	flowControl : IF '(' . expression ')' THEN command ifThenCont  (30)

	CHAR_LIT  shift 58
	INT_LIT  shift 59
	BOOL_LIT  shift 60
	IDENTIFIER  shift 61
	'('  shift 63
	.  error

	functCall  goto 64
	expression  goto 106
	logicalExpression  goto 67
	arithmeticExpression  goto 68
	integerExpression  goto 69
	charExpression  goto 70


state 74
	commandBlock : '{' commandBlockList '}' .  (26)

	.  reduce 26


state 75
	commandBlockList : command ';' . commandBlockListCont  (27)
	commandBlockListCont : .  (29)
	command : .  (43)

	IDENTIFIER  shift 35
	READ  shift 36
	PRINT  shift 37
	RETURN  shift 38
	FOR  shift 39
	IF  shift 40
	'{'  shift 28
	';'  reduce 43
	'}'  reduce 29

	commandBlock  goto 41
	command  goto 107
	commandBlockListCont  goto 108
	flowControl  goto 44
	print  goto 45
	return  goto 46
	read  goto 47
	attribuition  goto 48


state 76
	functParamsDefCont : ',' TYPE IDENTIFIER functParamsDefCont .  (24)

	.  reduce 24


state 77
	attribuitionCont : '[' expression . ']' '=' expression  (46)

	']'  shift 109
	.  error


state 78
	attribuitionCont : '=' expression .  (45)

	.  reduce 45


state 79
	expressionVarCont : '[' . arrayPosition ']'  (68)

	INT_LIT  shift 59
	.  error

	integerExpression  goto 110
	arrayPosition  goto 111


state 80
	functCall : IDENTIFIER '(' . functParams ')'  (19)
	functParams : .  (21)

	IDENTIFIER  shift 112
	')'  reduce 21

	functParams  goto 113


state 81
	arithmeticExpression : IDENTIFIER expressionVarCont .  (58)

	.  reduce 58


state 82
	printList : STRING printList .  (50)

	.  reduce 50


state 83
	expression : '(' expression . ')'  (63)

	')'  shift 114
	.  error


state 84
	printList : expression printList .  (51)

	.  reduce 51


state 85
	logicalOperators : '|' . '|'  (74)

	'|'  shift 115
	.  error


state 86
	logicalOperators : '&' . '&'  (75)

	'&'  shift 116
	.  error


state 87
	logicalExpression : logicalExpression logicalOperators . logicalExpression  (54)

	INT_LIT  shift 59
	BOOL_LIT  shift 60
	IDENTIFIER  shift 117
	.  error

	logicalExpression  goto 118
	arithmeticExpression  goto 119
	integerExpression  goto 69


state 88
	relationalOperators : '=' . '='  (76)

	'='  shift 120
	.  error


state 89
	relationalOperators : '!' . '='  (77)

	'='  shift 121
	.  error


state 90
	relationalOperators : '<' . '='  (78)

	'='  shift 122
	.  error


state 91
	relationalOperators : '>' . '='  (79)

	'='  shift 123
	.  error


state 92
	arithmeticOperators : '+' .  (80)

	.  reduce 80


state 93
	arithmeticOperators : '-' .  (81)

	.  reduce 81


state 94
	arithmeticOperators : '*' .  (82)

	.  reduce 82


state 95
	arithmeticOperators : '/' .  (83)

	.  reduce 83


state 96
	logicalExpression : arithmeticExpression relationalOperators . arithmeticExpression  (53)

	INT_LIT  shift 59
	IDENTIFIER  shift 117
	.  error

	arithmeticExpression  goto 124
	integerExpression  goto 69


state 97
	arithmeticExpression : arithmeticExpression arithmeticOperators . arithmeticExpression  (56)

	INT_LIT  shift 59
	IDENTIFIER  shift 117
	.  error

	arithmeticExpression  goto 125
	integerExpression  goto 69


state 98
	integerExpression : integerExpression arithmeticOperators . integerExpression  (59)

	INT_LIT  shift 59
	.  error

	integerExpression  goto 126


state 99
	operator : relationalOperators .  (72)

	.  reduce 72


state 100
	operator : logicalOperators .  (71)

	.  reduce 71


state 101
	operator : arithmeticOperators .  (73)

	.  reduce 73


state 102
	charExpression : charExpression operator . charExpression  (61)

	CHAR_LIT  shift 58
	.  error

	charExpression  goto 127


103: shift/reduce conflict (shift 128, reduce 69) on '='
state 103
	functCall : IDENTIFIER . '(' functParams ')'  (19)
	forCont : IDENTIFIER . '=' expression TO expression forEnd  (35)
	arithmeticExpression : IDENTIFIER . expressionVarCont  (58)
	expressionVarCont : .  (69)

	'['  shift 79
	'('  shift 80
	'='  shift 128
	')'  reduce 69
	'!'  reduce 69
	'<'  reduce 69
	'>'  reduce 69
	'+'  reduce 69
	'-'  reduce 69
	'*'  reduce 69
	'/'  reduce 69

	expressionVarCont  goto 81


state 104
	forCont : expression . forEnd  (34)

	')'  shift 129
	.  error

	forEnd  goto 130


state 105
	flowControl : FOR '(' forCont .  (31)

	.  reduce 31


state 106
	flowControl : IF '(' expression . ')' THEN command ifThenCont  (30)

	')'  shift 131
	.  error


state 107
	commandBlockListCont : command . ';' commandBlockListCont  (28)

	';'  shift 132
	.  error


state 108
	commandBlockList : command ';' commandBlockListCont .  (27)

	.  reduce 27


state 109
	attribuitionCont : '[' expression ']' . '=' expression  (46)

	'='  shift 133
	.  error


state 110
	integerExpression : integerExpression . arithmeticOperators integerExpression  (59)
	arrayPosition : integerExpression .  (70)

	'+'  shift 92
	'-'  shift 93
	'*'  shift 94
	'/'  shift 95
	']'  reduce 70

	arithmeticOperators  goto 98


state 111
	expressionVarCont : '[' arrayPosition . ']'  (68)

	']'  shift 134
	.  error


state 112
	functParams : IDENTIFIER . functParamsCont  (20)
	functParamsCont : .  (23)

	','  shift 135
	')'  reduce 23

	functParamsCont  goto 136


state 113
	functCall : IDENTIFIER '(' functParams . ')'  (19)

	')'  shift 137
	.  error


state 114
	expression : '(' expression ')' .  (63)

	.  reduce 63


state 115
	logicalOperators : '|' '|' .  (74)

	.  reduce 74


state 116
	logicalOperators : '&' '&' .  (75)

	.  reduce 75


state 117
	arithmeticExpression : IDENTIFIER . expressionVarCont  (58)
	expressionVarCont : .  (69)

	'['  shift 79
	CHAR_LIT  reduce 69
	INT_LIT  reduce 69
	BOOL_LIT  reduce 69
	IDENTIFIER  reduce 69
	STRING  reduce 69
	TO  reduce 69
	ELSE  reduce 69
	';'  reduce 69
	']'  reduce 69
	'('  reduce 69
	')'  reduce 69
	'='  reduce 69
	'|'  reduce 69
	'&'  reduce 69
	'!'  reduce 69
	'<'  reduce 69
	'>'  reduce 69
	'+'  reduce 69
	'-'  reduce 69
	'*'  reduce 69
	'/'  reduce 69

	expressionVarCont  goto 81


118: shift/reduce conflict (shift 85, reduce 54) on '|'
118: shift/reduce conflict (shift 86, reduce 54) on '&'
state 118
	logicalExpression : logicalExpression . logicalOperators logicalExpression  (54)
	logicalExpression : logicalExpression logicalOperators logicalExpression .  (54)

	'|'  shift 85
	'&'  shift 86
	CHAR_LIT  reduce 54
	INT_LIT  reduce 54
	BOOL_LIT  reduce 54
	IDENTIFIER  reduce 54
	STRING  reduce 54
	TO  reduce 54
	ELSE  reduce 54
	';'  reduce 54
	']'  reduce 54
	'('  reduce 54
	')'  reduce 54

	logicalOperators  goto 87


state 119
	logicalExpression : arithmeticExpression . relationalOperators arithmeticExpression  (53)
	arithmeticExpression : arithmeticExpression . arithmeticOperators arithmeticExpression  (56)

	'='  shift 88
	'!'  shift 89
	'<'  shift 90
	'>'  shift 91
	'+'  shift 92
	'-'  shift 93
	'*'  shift 94
	'/'  shift 95
	.  error

	relationalOperators  goto 96
	arithmeticOperators  goto 97


state 120
	relationalOperators : '=' '=' .  (76)

	.  reduce 76


state 121
	relationalOperators : '!' '=' .  (77)

	.  reduce 77


state 122
	relationalOperators : '<' '=' .  (78)

	.  reduce 78


state 123
	relationalOperators : '>' '=' .  (79)

	.  reduce 79


state 124
	logicalExpression : arithmeticExpression relationalOperators arithmeticExpression .  (53)
	arithmeticExpression : arithmeticExpression . arithmeticOperators arithmeticExpression  (56)

	'+'  shift 92
	'-'  shift 93
	'*'  shift 94
	'/'  shift 95
	CHAR_LIT  reduce 53
	INT_LIT  reduce 53
	BOOL_LIT  reduce 53
	IDENTIFIER  reduce 53
	STRING  reduce 53
	TO  reduce 53
	ELSE  reduce 53
	';'  reduce 53
	']'  reduce 53
	'('  reduce 53
	')'  reduce 53
	'|'  reduce 53
	'&'  reduce 53

	arithmeticOperators  goto 97


125: shift/reduce conflict (shift 92, reduce 56) on '+'
125: shift/reduce conflict (shift 93, reduce 56) on '-'
125: shift/reduce conflict (shift 94, reduce 56) on '*'
125: shift/reduce conflict (shift 95, reduce 56) on '/'
state 125
	arithmeticExpression : arithmeticExpression . arithmeticOperators arithmeticExpression  (56)
	arithmeticExpression : arithmeticExpression arithmeticOperators arithmeticExpression .  (56)

	'+'  shift 92
	'-'  shift 93
	'*'  shift 94
	'/'  shift 95
	CHAR_LIT  reduce 56
	INT_LIT  reduce 56
	BOOL_LIT  reduce 56
	IDENTIFIER  reduce 56
	STRING  reduce 56
	TO  reduce 56
	ELSE  reduce 56
	';'  reduce 56
	']'  reduce 56
	'('  reduce 56
	')'  reduce 56
	'='  reduce 56
	'|'  reduce 56
	'&'  reduce 56
	'!'  reduce 56
	'<'  reduce 56
	'>'  reduce 56

	arithmeticOperators  goto 97


126: shift/reduce conflict (shift 92, reduce 59) on '+'
126: shift/reduce conflict (shift 93, reduce 59) on '-'
126: shift/reduce conflict (shift 94, reduce 59) on '*'
126: shift/reduce conflict (shift 95, reduce 59) on '/'
state 126
	integerExpression : integerExpression . arithmeticOperators integerExpression  (59)
	integerExpression : integerExpression arithmeticOperators integerExpression .  (59)

	'+'  shift 92
	'-'  shift 93
	'*'  shift 94
	'/'  shift 95
	CHAR_LIT  reduce 59
	INT_LIT  reduce 59
	BOOL_LIT  reduce 59
	IDENTIFIER  reduce 59
	STRING  reduce 59
	TO  reduce 59
	ELSE  reduce 59
	';'  reduce 59
	']'  reduce 59
	'('  reduce 59
	')'  reduce 59
	'='  reduce 59
	'|'  reduce 59
	'&'  reduce 59
	'!'  reduce 59
	'<'  reduce 59
	'>'  reduce 59

	arithmeticOperators  goto 98


127: shift/reduce conflict (shift 88, reduce 61) on '='
127: shift/reduce conflict (shift 85, reduce 61) on '|'
127: shift/reduce conflict (shift 86, reduce 61) on '&'
127: shift/reduce conflict (shift 89, reduce 61) on '!'
127: shift/reduce conflict (shift 90, reduce 61) on '<'
127: shift/reduce conflict (shift 91, reduce 61) on '>'
127: shift/reduce conflict (shift 92, reduce 61) on '+'
127: shift/reduce conflict (shift 93, reduce 61) on '-'
127: shift/reduce conflict (shift 94, reduce 61) on '*'
127: shift/reduce conflict (shift 95, reduce 61) on '/'
state 127
	charExpression : charExpression . operator charExpression  (61)
	charExpression : charExpression operator charExpression .  (61)

	'='  shift 88
	'|'  shift 85
	'&'  shift 86
	'!'  shift 89
	'<'  shift 90
	'>'  shift 91
	'+'  shift 92
	'-'  shift 93
	'*'  shift 94
	'/'  shift 95
	CHAR_LIT  reduce 61
	INT_LIT  reduce 61
	BOOL_LIT  reduce 61
	IDENTIFIER  reduce 61
	STRING  reduce 61
	TO  reduce 61
	ELSE  reduce 61
	';'  reduce 61
	']'  reduce 61
	'('  reduce 61
	')'  reduce 61

	relationalOperators  goto 99
	logicalOperators  goto 100
	arithmeticOperators  goto 101
	operator  goto 102


state 128
	forCont : IDENTIFIER '=' . expression TO expression forEnd  (35)

	CHAR_LIT  shift 58
	INT_LIT  shift 59
	BOOL_LIT  shift 60
	IDENTIFIER  shift 61
	'('  shift 63
	.  error

	functCall  goto 64
	expression  goto 138
	logicalExpression  goto 67
	arithmeticExpression  goto 68
	integerExpression  goto 69
	charExpression  goto 70


state 129
	forEnd : ')' . command  (36)
	command : .  (43)

	IDENTIFIER  shift 35
	READ  shift 36
	PRINT  shift 37
	RETURN  shift 38
	FOR  shift 39
	IF  shift 40
	'{'  shift 28
	ELSE  reduce 43
	';'  reduce 43

	commandBlock  goto 41
	command  goto 139
	flowControl  goto 44
	print  goto 45
	return  goto 46
	read  goto 47
	attribuition  goto 48


state 130
	forCont : expression forEnd .  (34)

	.  reduce 34


state 131
	flowControl : IF '(' expression ')' . THEN command ifThenCont  (30)

	THEN  shift 140
	.  error


state 132
	commandBlockListCont : command ';' . commandBlockListCont  (28)
	commandBlockListCont : .  (29)
	command : .  (43)

	IDENTIFIER  shift 35
	READ  shift 36
	PRINT  shift 37
	RETURN  shift 38
	FOR  shift 39
	IF  shift 40
	'{'  shift 28
	';'  reduce 43
	'}'  reduce 29

	commandBlock  goto 41
	command  goto 107
	commandBlockListCont  goto 141
	flowControl  goto 44
	print  goto 45
	return  goto 46
	read  goto 47
	attribuition  goto 48


state 133
	attribuitionCont : '[' expression ']' '=' . expression  (46)

	CHAR_LIT  shift 58
	INT_LIT  shift 59
	BOOL_LIT  shift 60
	IDENTIFIER  shift 61
	'('  shift 63
	.  error

	functCall  goto 64
	expression  goto 142
	logicalExpression  goto 67
	arithmeticExpression  goto 68
	integerExpression  goto 69
	charExpression  goto 70


state 134
	expressionVarCont : '[' arrayPosition ']' .  (68)

	.  reduce 68


state 135
	functParamsCont : ',' . IDENTIFIER functParamsCont  (22)

	IDENTIFIER  shift 143
	.  error


state 136
	functParams : IDENTIFIER functParamsCont .  (20)

	.  reduce 20


state 137
	functCall : IDENTIFIER '(' functParams ')' .  (19)

	.  reduce 19


state 138
	forCont : IDENTIFIER '=' expression . TO expression forEnd  (35)

	TO  shift 144
	.  error


state 139
	forEnd : ')' command .  (36)

	.  reduce 36


state 140
	flowControl : IF '(' expression ')' THEN . command ifThenCont  (30)
	command : .  (43)

	IDENTIFIER  shift 35
	READ  shift 36
	PRINT  shift 37
	RETURN  shift 38
	FOR  shift 39
	IF  shift 40
	'{'  shift 28
	ELSE  reduce 43
	';'  reduce 43
